@@ -7,6 +7,9 @@ CHANGELOG
 
 Release 1.7.0	[??? ??, 2010]
 
+Enhancements:
+	Added equality test for graphs and digraphs.
+
 
 Release 1.6.3	[Dec 13, 2009]
 
